libs/node/test/data/SMSHOME2/bad/bad15.ecf
# test unrecognized pre-processing directive
%ecfmicro * 
*VAR
*ecfmicro %
